--- a/admin/index.html
+++ b/admin/index.html
@@ -62,6 +62,15 @@
                     </svg>
                     Statistics
                 </button>
+                <button id="accessBtn" class="btn btn-glass" style="border-color: #ff0050; color: #ff0050;">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path
+                            d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4">
+                        </path>
+                    </svg>
+                    Keys
+                </button>
             </div>
         </header>
 
@@ -123,39 +132,39 @@
                             </select>
                         </div>
 
-                    <div class="form-group">
-                        <label for="pasteFolder">Folder</label>
-                        <div style="display: flex; gap: 8px;">
-                            <select id="pasteFolder" class="select-field">
-                                <option value="">No Folder</option>
-                                <!-- Populated dynamically -->
-                            </select>
-                            <button id="manageFoldersBtn" class="btn btn-glass btn-icon" title="Manage Folders"
-                                type="button">
-                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2">
-                                    <path
-                                        d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z">
-                                    </path>
-                                </svg>
-                            </button>
+                        <div class="form-group">
+                            <label for="pasteFolder">Folder</label>
+                            <div style="display: flex; gap: 8px;">
+                                <select id="pasteFolder" class="select-field">
+                                    <option value="">No Folder</option>
+                                    <!-- Populated dynamically -->
+                                </select>
+                                <button id="manageFoldersBtn" class="btn btn-glass btn-icon" title="Manage Folders"
+                                    type="button">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2">
+                                        <path
+                                            d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z">
+                                        </path>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label for="pastePassword">Password (Optional)</label>
-                    <input type="password" id="pastePassword" placeholder="Protect with password..."
-                        class="input-field" autocomplete="new-password">
-                </div>
+                    <div class="form-group">
+                        <label for="pastePassword">Password (Optional)</label>
+                        <input type="password" id="pastePassword" placeholder="Protect with password..."
+                            class="input-field" autocomplete="new-password">
+                    </div>
 
                     <div class="form-group">
                         <div
                             style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px;">
                             <label for="pasteContent">Content</label>
-                            <button id="uploadImageBtn" class="btn-small btn-glass" title="Upload Image">
-                                🖼️ Add Image
-                                <input type="file" id="imageInput" style="display: none;" accept="image/*">
+                            <button id="uploadImageBtn" class="btn-small btn-glass" title="Upload Media">
+                                🖼️ Add Media
+                                <input type="file" id="imageInput" style="display: none;" accept="image/*,video/*">
                             </button>
                         </div>
                         <textarea id="pasteContent"
@@ -245,6 +254,12 @@
             <div id="statsContent" class="stats-grid">
                 <!-- Dynamically populated -->
             </div>
+            <div style="padding: 20px; text-align: center; border-top: 1px solid rgba(255,255,255,0.1);">
+                <button id="clearAnalyticsBtn" class="btn btn-secondary"
+                    style="color: #ff0050; border-color: rgba(255,0,80,0.3); width: 100%;">
+                    ⚠️ Clear All Analytics DB
+                </button>
+            </div>
         </div>
     </div>
 
@@ -291,7 +306,58 @@
         </div>
     </div>
 
-    <script src="../shared/api.js"></script>
+    <!-- Access Key Modal -->
+    <div id="accessModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Access Keys</h3>
+                <button id="closeAccessBtn" class="btn-icon">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
+                        <path d="M14 4L4 14M4 4L14 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                    </svg>
+                </button>
+            </div>
+            <div style="text-align: center; padding: 20px;">
+                <p style="color: #888; margin-bottom: 20px;">Generate a new key to grant private access.</p>
+                <div
+                    style="display: flex; gap: 10px; justify-content: center; align-items: center; margin-bottom: 20px;">
+                    <input type="text" id="generatedKey" readonly class="input-field"
+                        style="text-align: center; font-family: monospace; font-size: 1.2rem; border-color: #ff0050; color: #ff0050;"
+                        placeholder="Press Generate...">
+                    <button id="copyKeyBtn" class="btn-icon" title="Copy">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                            <rect x="7" y="7" width="10" height="10" rx="2" stroke="currentColor" stroke-width="2" />
+                            <path d="M13 3H5C3.89543 3 3 3.89543 3 5V13" stroke="currentColor" stroke-width="2" />
+                        </svg>
+                    </button>
+                </div>
+                <button id="generateKeyBtn" class="btn btn-primary btn-large"
+                    style="background: #ff0050; color: white;">Generate New Key</button>
+            </div>
+
+            <div class="key-list-wrapper"
+                style="padding: 0 20px 20px; text-align: left; border-top: 1px solid rgba(255,255,255,0.1);">
+                <div
+                    style="display:flex; justify-content:space-between; align-items:center; margin-top: 15px; margin-bottom: 10px;">
+                    <h4
+                        style="color: #888; margin: 0; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 1px;">
+                        History</h4>
+                    <button id="refreshKeysBtn" class="btn-icon" style="opacity:0.6;"><svg width="14" height="14"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M23 4v6h-6" />
+                            <path d="M1 20v-6h6" />
+                            <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15" />
+                        </svg></button>
+                </div>
+                <div id="keyList"
+                    style="max-height: 250px; overflow-y: auto; background: rgba(0,0,0,0.2); border-radius: 8px; font-family: 'JetBrains Mono', monospace; font-size: 0.85rem;">
+                    <!-- Keys -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="../shared/api.js?v=2"></script>
     <script src="app.js"></script>
 </body>
 
