--- a/public/index.html
+++ b/public/index.html
@@ -116,6 +116,7 @@
             -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
             -webkit-mask-composite: xor;
             mask-composite: exclude;
+            mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
             opacity: 0.4;
             animation: borderFlow 3s linear infinite;
             pointer-events: none;
@@ -310,7 +311,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            background: #050505;
+            background: transparent;
             display: block;
             height: 100vh;
             font-family: 'Inter', sans-serif;
@@ -586,7 +587,7 @@
     <!-- Background Media -->
     <!-- Background Media -->
     <div id="video-background-container"
-        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -5; background: #000;">
+        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: #000;">
     </div>
     <script src="/public/video-slideshow.js"></script>
 
