--- a/public/index.html
+++ b/public/index.html
@@ -1036,7 +1036,7 @@
                 const key = localStorage.getItem('private_access_key');
                 if (key) headers['x-access-key'] = key;
 
-                const res = await fetch('/api/pastes/public-list', {
+                const res = await fetch(`/api/pastes/public-list?_t=${Date.now()}`, {
                     headers,
                     credentials: 'include'
                 });
